Api & contracts better defined and more robust. Included SoftDeleted filters. Included more props for Product
